hack: force hyper to be an rlib
If a consumer is also a shared lib we can hit resolution errors, as we
have no way to control this and rlib is what I need. This ensures that
we get that. The issue is tracked: https://github.com/rust-lang/rust/issues/82151

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ include = [
   #"build.rs",
 ]
 
-[lib]
-crate-type = ["lib", "staticlib", "cdylib"]
+#[lib]
+#crate-type = ["lib", "staticlib", "cdylib"]
 
 [dependencies]
 bytes = "1"
